--- a/static/styl/main.styl
+++ b/static/styl/main.styl
@@ -27,13 +27,44 @@ azul_mozart = #2475E0
 	padding 0
 
 .OptionMenu
-	background red
+	background linear-gradient(45deg, #B27301 0%, #FFAE1D 100%)
 	height 100%
 	position fixed
-	right -200px
+	right -265px
 	transition 0.4s
-	width 200px
+	width 250px
 	z-index 999
+	box-shadow 0px 0px 15px #000
 	&.is-active
 		right 0
+
+.OptionMenu-avatar
+	display inline
+	margin 0
+	img
+		border-radius 50%
+
+.OptionMenu-link
+	text-decoration none
+	color black
+
+.OptionMenu-list
+	padding 0
+
+.OptionMenu-option
+	display block
+	position relative
+	padding 1em 1em
+
+.OptionMenu-title
+	font-weight 500
+	text-align center
+
+.OptionMenu-username
+	position absolute
+	line-height 50px
+	margin-left 1em
+	font-weight 700
+	
+	
 	
