Añadidos thumbnails de las obras

--- a/static/styl/main.styl
+++ b/static/styl/main.styl
@@ -101,9 +101,67 @@ azul_mozart = #2475E0
 	
 	
 
+.Work-author
+.Work-date
+	color black
+	display inline-block
+	margin 0.25em 0 0.5em 0
+
+.Work-author
+	a
+		color black
+		font-style italic
+		font-weight 600
+		text-decoration none
+
+.Work-avatar
+	float left
+	margin 0.5em 0 0 0.6em
+
+	a
+		text-decoration none
+
+		img
+			border-radius 50%
+
 .Work-container
 	margin-top 6.7em
 	padding-top 0.6em
 	position relative
 	text-align center
 	width 100%
+
+.Work-data
+	position relative
+
+.Work-image
+	height 173px
+	margin 0
+	position relative
+	border-bottom 5px solid azul_mozart
+
+.Work-info
+	float right
+	width 240px
+
+.Work-item
+	box-shadow 2px 2px 10px rgba(black, 0.5)
+	display inline-block
+	height auto
+	margin 0.6em 1em
+	position relative
+	width 300px
+	border 1px solid gray
+
+.Work-title
+	font-size 1.1em
+	font-style italic
+	font-weight 500
+	margin 0.8em 0 0 0
+	text-align center
+	padding-left 0.4em
+
+	a
+		color black
+		font-family 'mozArt'
+		text-decoration none
