Arregaldo bug del menu lateral al hacer scroll cuando esta activo

--- a/static/styl/main.styl
+++ b/static/styl/main.styl
@@ -7,6 +7,10 @@ naranja_mozart = #FFA504
 gris_mozart = #F1F1F1
 azul_mozart = #2475E0
 
+body
+	&.hidden
+		overflow hidden
+
 .Header
 	background gris_mozart
 	border-bottom 2px solid azul_mozart
