--- a/static/styl/main.styl
+++ b/static/styl/main.styl
@@ -63,6 +63,7 @@ body
 .OptionMenu
 	background linear-gradient(45deg, #B27301 0%, #FFAE1D 100%)
 	height 100%
+	overflow-y scroll
 	position fixed
 	right -265px
 	transition 0.4s
