--- a/static/styl/main.styl
+++ b/static/styl/main.styl
@@ -8,8 +8,9 @@ gris_mozart = #F1F1F1
 azul_mozart = #2475E0
 
 body
+	box-sizing border-box !important
 	&.hidden
-		overflow hidden
+		overflow-y hidden
 
 .Header
 	background gris_mozart
@@ -63,11 +64,10 @@ body
 .OptionMenu
 	background linear-gradient(45deg, #B27301 0%, #FFAE1D 100%)
 	height 100%
-	overflow-y scroll
 	position fixed
 	right -265px
-	transition 0.4s
-	width 250px
+	transition 1s
+	width 265px
 	z-index 999
 	box-shadow 0px 0px 15px #000
 	&.is-active
