--- a/static/styl/main.styl
+++ b/static/styl/main.styl
@@ -62,49 +62,22 @@ body
 	display inline-block
 
 .OptionMenu
-	background linear-gradient(45deg, #B27301 0%, #FFAE1D 100%)
-	height 100%
-	position fixed
-	right -265px
+	background red
+	display block
+	height 200px
+	overflow hidden
 	transition 1s
-	width 265px
-	z-index 999
-	box-shadow 0px 0px 15px #000
-	&.is-active
-		right 0
-
-.OptionMenu-avatar
-	display inline
-	margin 0
-	img
-		border-radius 50%
-
-.OptionMenu-link
-	text-decoration none
-	color black
-
-.OptionMenu-list
-	padding 0
+	width 100%
 
 .OptionMenu-option
 	display block
-	position relative
-	padding 1em 1em
-	font-weight 700
-	&.text-center
-		text-align center
-	
-.OptionMenu-title
-	font-weight 500
 	text-align center
-
-.OptionMenu-username
-	position absolute
-	line-height 50px
-	margin-left 1em
 	
-	
-	
+.OptionMenu-link
+	text-decoration none
+	color white
+	display block
+	padding 0.5em
 
 .Work-author
 .Work-date
