--- a/static/styl/main.styl
+++ b/static/styl/main.styl
@@ -1,4 +1,5 @@
 @import "nib"
+@import "nib/gradients"
 @import "normalize.styl"
 @import "fonts.styl"
 @import "icons.styl"
@@ -14,7 +15,6 @@ body
 
 .Header
 	background gris_mozart
-	border-bottom 2px solid azul_mozart
 	position fixed
 	top 0
 	width 100%
@@ -22,6 +22,7 @@ body
 
 .Header-button
 	color naranja_mozart
+	cursor pointer
 	font-size 1.9em
 	position absolute
 	right 0.5em
@@ -37,7 +38,7 @@ body
 	background azul_mozart
 	position fixed
 	text-align center
-	top 3.5em
+	top 3.4em
 	width 100%
 	z-index 2
 
@@ -62,22 +63,30 @@ body
 	display inline-block
 
 .OptionMenu
-	background red
-	display block
-	height 200px
-	overflow hidden
-	transition 1s
+	background #E54D3C
+	display none
+	height 220px
 	width 100%
+	overflow hidden
 
 .OptionMenu-option
 	display block
-	text-align center
 	
 .OptionMenu-link
-	text-decoration none
 	color white
 	display block
-	padding 0.5em
+	padding 1em 0
+	margin 0
+	position relative
+	text-decoration none
+	text-align center
+	transition 0.5s
+	&:hover
+		background #E53421
+
+.OptionMenu-list
+	margin 0
+	padding 0
 
 .Work-author
 .Work-date
