Fondo degradado al menu

--- a/static/styl/main.styl
+++ b/static/styl/main.styl
@@ -7,6 +7,7 @@
 naranja_mozart = #FFA504
 gris_mozart = #F1F1F1
 azul_mozart = #2475E0
+rojo_mozart = #E54D3C
 
 body
 	box-sizing border-box !important
@@ -65,7 +66,7 @@ body
 	display inline-block
 
 .OptionMenu
-	background #E54D3C
+	background linear-gradient(45deg, #B23C2F 0%, rojo_mozart 100%)
 	display none
 	height 220px
 	width 100%
