--- a/static/styl/main.styl
+++ b/static/styl/main.styl
@@ -10,17 +10,15 @@ azul_mozart = #2475E0
 rojo_mozart = #E54D3C
 
 body
-	box-sizing border-box !important
-	&.hidden
-		overflow-y hidden
+	background #EDEDED
 
 .Header
-	background gris_mozart
+	background white
+	height 3.75em
 	position fixed
 	top 0
 	width 100%
 	z-index 3
-	height 3.75em
 
 .Header-button
 	color naranja_mozart
@@ -35,6 +33,64 @@ body
 	float left
 	margin 0.4em 0.4em 0.6em 1em
 	padding 0
+
+.Login-button
+	background #FFBC30
+	border none
+	border-radius 5px
+	color white
+	padding 0.4em 0.5em
+	width 90%
+	margin 0 auto
+	display block
+
+.Login-container
+	background white
+	border 1px solid transparent
+	border-radius 20px
+	margin 2em auto
+	position relative
+	top 3.7em
+	width 90%
+
+.Login-form
+	margin-top 1.5em
+	padding 0
+
+.Login-input
+	width 90%
+	display block
+	margin 1em auto
+	background-color: #eee;
+	border-radius 3px
+	color: #777;
+	padding 0.5em
+	border none
+	text-align center
+
+.Login-socialOptContainer
+	width 90%
+	margin 0.5em auto
+	text-align center
+	
+
+.Login-socialOption
+	font-size 4em
+	display inline-block
+	text-decoration none
+	
+
+.Login-title
+	display block
+	font-weight 500
+	margin 1em
+	padding 0
+	text-align center
+	color gray
+
+.Login-traditional
+	height auto
+	width 100%
 
 .Navbar
 	background azul_mozart
