--- a/static/styl/main.styl
+++ b/static/styl/main.styl
@@ -48,7 +48,7 @@ body
 	background white
 	border 1px solid transparent
 	border-radius 20px
-	margin 2em auto
+	margin 1em auto
 	position relative
 	top 3.7em
 	width 90%
@@ -214,6 +214,8 @@ body
 
 @media screen and (min-width:980px)
 	
+	/* Para El Menu */
+
 	#menu-slide
 		display block !important
 
@@ -251,4 +253,36 @@ body
 		&:hover
 			background transparent
 			border-top-color red
+		
+	/* Para El Menu */
+		
+	/* Para El Login*/
+	
+	.Login-button
+		margin-bottom 3em
+		width 70%
+
+	.Login-container
+		width 70%
+		margin-top 1.5em
+	
+	.Login-form
+		border-top 2px solid azul_mozart
+		width 80%
+		display block 
+		margin 0 auto
+	
+	.Login-input
+		margin 2em auto
+	
+	.Login-social
+		border-top 2px solid azul_mozart
+		width 80%
+		display block
+		margin 0 auto
+	
+	.Login-socialOption
+		margin 0em 0.3em
+
+	/* Para El Login*/
 			
