añadida vista movil del formulario de registro

--- a/static/styl/main.styl
+++ b/static/styl/main.styl
@@ -145,6 +145,44 @@ body
 	margin 0
 	padding 0
 
+.Register-Button
+	background #FFBC30
+	border none
+	border-radius 5px
+	color white
+	display block
+	margin 0 auto
+	padding 0.4em 0.5em
+	width 90%
+	
+.Register-container
+	background white
+	border 1px solid transparent
+	border-radius 20px
+	margin 1em auto
+	position relative
+	top 3.7em
+	width 90%
+
+.Register-input
+	background-color: #eee;
+	border none
+	border-radius 3px
+	color: #777;
+	display block
+	margin 1em auto
+	padding 0.5em
+	text-align center
+	width 90%
+
+.Register-title
+	font-weight 500
+	color gray
+	text-align center
+	margin 1em
+
+
+
 .Work-author
 .Work-date
 	color black
