añadida vista tablet y desktop del login

--- a/static/styl/main.styl
+++ b/static/styl/main.styl
@@ -297,6 +297,12 @@ body
 		width 70% !important
 
 	/* Para El Login*/
+	
+	/*Para el Registro*/
+	.Register-container
+		width 60% !important
+
+	/*Para el Registro*/
 
 
 @media screen and (min-width:480px)
@@ -330,4 +336,26 @@ body
 		margin 0em 0.3em
 	
 	/* Para El Login*/
+		
+	/*Para el Registro*/
+		
+	.Register-Button
+		margin-bottom 2em
+		width 70%
+
+	.Register-container
+		margin-top 2.5em
+		
+	.Register-input
+		margin 2.5em auto
+	
+	.Register-form
+		border-top 2px solid azul_mozart
+		width 90%
+		display block
+		margin 0 auto
+
+	/*Para el Registro*/
+
+		
 
