modulado los styl y cambiado el index

--- a/static/styl/main.styl
+++ b/static/styl/main.styl
@@ -1,361 +1,14 @@
-@import "nib"
-@import "nib/gradients"
-@import "normalize.styl"
-@import "fonts.styl"
-@import "icons.styl"
-
 naranja_mozart = #FFA504
 gris_mozart = #F1F1F1
 azul_mozart = #2475E0
 rojo_mozart = #E54D3C
 
-body
-	background #EDEDED
-
-.Header
-	background white
-	height 3.75em
-	position fixed
-	top 0
-	width 100%
-	z-index 3
-
-.Header-button
-	color naranja_mozart
-	cursor pointer
-	font-size 1.9em
-	position absolute
-	right 0.5em
-	top 0.3em
-	z-index 1
-	
-.Header-Logo
-	float left
-	margin 0.4em 0.4em 0.6em 1em
-	padding 0
-
-.Login-button
-	background #FFBC30
-	border none
-	border-radius 5px
-	color white
-	display block
-	margin 0 auto
-	padding 0.4em 0.5em
-	width 90%
-
-.Login-container
-	background white
-	border 1px solid transparent
-	border-radius 20px
-	margin 1em auto
-	position relative
-	top 3.7em
-	width 90%
-
-.Login-form
-	margin-top 1.5em
-	padding 0
-
-.Login-input
-	background-color: #eee;
-	border none
-	border-radius 3px
-	color: #777;
-	display block
-	margin 1em auto
-	padding 0.5em
-	text-align center
-	width 90%
-
-.Login-socialOptContainer
-	margin 0.5em auto
-	text-align center
-	width 90%
-	
-.Login-socialOption
-	display inline-block
-	font-size 4em
-	text-decoration none
-	
-.Login-title
-	color gray
-	display block
-	font-weight 500
-	margin 1em
-	padding 0
-	text-align center
-
-.Login-traditional
-	height auto
-	width 100%
-
-.Navbar
-	background azul_mozart
-	border-top 5px solid transparent
-	position fixed
-	text-align center
-	top 3.7em
-	width 100%
-	z-index 2
-
-.Navbar-link
-	color #538DEC
-	font-size 2.3em
-	padding 0.3em
-	text-decoration none
-	transition color 0.15s
-	&:hover
-		color naranja_mozart
-
-.Navbar-list
-	list-style none
-	margin 0
-	overflow-x auto
-	overflow-y hidden
-	padding 0
-	white-space nowrap
-
-.Navbar-option
-	display inline-block
-
-.OptionMenu
-	background linear-gradient(45deg, #B23C2F 0%, rojo_mozart 100%)
-	display none
-	height 220px
-	overflow hidden
-	width 100%
-
-.OptionMenu-option
-	display block
-	
-.OptionMenu-link
-	color white
-	display block
-	margin 0
-	padding 1em 0
-	position relative
-	text-align center
-	text-decoration none
-	transition 0.5s
-	&:hover
-		background #E53421
-
-.OptionMenu-list
-	margin 0
-	padding 0
-
-.Register-Button
-	background #FFBC30
-	border none
-	border-radius 5px
-	color white
-	display block
-	margin 0 auto
-	padding 0.4em 0.5em
-	width 90%
-	
-.Register-container
-	background white
-	border 1px solid transparent
-	border-radius 20px
-	margin 1em auto
-	position relative
-	top 3.7em
-	width 90%
-
-.Register-input
-	background-color: #eee;
-	border none
-	border-radius 3px
-	color: #777;
-	display block
-	margin 1em auto
-	padding 0.5em
-	text-align center
-	width 90%
-
-.Register-title
-	font-weight 500
-	color gray
-	text-align center
-	margin 1em
-
-
-
-.Work-author
-.Work-date
-	color black
-	display inline-block
-	margin 0.25em 0 0.5em 0
-
-.Work-author
-	a
-		color black
-		font-style italic
-		font-weight 600
-		text-decoration none
-
-.Work-avatar
-	float left
-	margin 0.5em 0 0 0.6em
-
-	a
-		text-decoration none
-
-		img
-			border-radius 50%
-
-.Work-container
-	margin-top 7em
-	padding-top 0.6em
-	position relative
-	text-align center
-	width 100%
-
-.Work-data
-	position relative
-
-.Work-image
-	border-bottom 5px solid azul_mozart
-	height 173px
-	margin 0
-	position relative
-
-.Work-info
-	float right
-	width 240px
-
-.Work-item
-	border 1px solid gray
-	box-shadow 2px 2px 10px rgba(black, 0.5)
-	display inline-block
-	height auto
-	margin 0.6em 0.4em
-	position relative
-	width 300px
-
-.Work-title
-	font-size 1.1em
-	font-style italic
-	font-weight 500
-	margin 0.8em 0 0 0
-	padding-left 0.4em
-	text-align center
-
-	a
-		color black
-		text-decoration none
-
-@media screen and (min-width:980px)
-	
-	/* Para El Menu */
-
-	#menu-slide
-		display block !important
-
-	#button-action
-		display none
-	
-	.OptionMenu
-		background transparent
-		display inline-block
-		height 100%
-		position absolute
-		right 2em
-		width auto
-	
-	.OptionMenu-option
-		display inline-block
-		margin 0 0.5em
-		
-	.OptionMenu-link
-		border-top 5px solid transparent
-		color #6E5353
-		font-size 0.9em
-		height 26px
-		line-height 26px
-		padding 1em
-		transition 0.3s border-top-color
-		transition 0s
-		&:before
-			border-right: 1px solid #000
-			content ''
-			height 1.5em
-			position absolute
-			right -1em
-			top 17px
-		&:hover
-			background transparent
-			border-top-color red
-		
-	/* Para El Menu */
-		
-	/* Para El Login*/
-
-	.Login-container
-		width 70% !important
-
-	/* Para El Login*/
-	
-	/*Para el Registro*/
-	.Register-container
-		width 60% !important
-
-	/*Para el Registro*/
-
-
-@media screen and (min-width:480px)
-
-	/* Para El Login*/
-		
-	.Login-button
-		margin-bottom 3em
-		width 70%
-
-	.Login-container
-		margin-top 2.5em
-		width 90%
-	
-	.Login-form
-		border-top 2px solid azul_mozart
-		display block 
-		margin 0 auto
-		width 80%
-	
-	.Login-input
-		margin 2em auto
-	
-	.Login-social
-		border-top 2px solid azul_mozart
-		display block
-		margin 0 auto
-		width 80%
-	
-	.Login-socialOption
-		margin 0em 0.3em
-	
-	/* Para El Login*/
-		
-	/*Para el Registro*/
-		
-	.Register-Button
-		margin-bottom 2em
-		width 70%
-
-	.Register-container
-		margin-top 2.5em
-		
-	.Register-input
-		margin 2.5em auto
-	
-	.Register-form
-		border-top 2px solid azul_mozart
-		width 90%
-		display block
-		margin 0 auto
-
-	/*Para el Registro*/
-
-		
-
+@import "base.styl"
+@import "fonts.styl"
+@import "home.styl"
+@import "icons.styl"
+@import "login.styl"
+@import "nib"
+@import "nib/gradients"
+@import "normalize.styl"
+@import "register.styl"
