--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
 	<section class="Login-container">
 		<article class="Login-traditional">
 			<h2 class="Login-title">Iniciar Sesión</h2>
-			<form action="" method="post" class="Login-form">
+			<form action="" class="Login-form">
 				<input class="Login-input" type="text" name="username" placeholder="Username"/>
 				<input class="Login-input" type="password" name="password" placeholder="Password">
 				<button class="Login-button" type="submit">Login</button>
