estilos al index

--- a/static/styl/login.styl
+++ b/static/styl/login.styl
@@ -12,7 +12,7 @@
 	background white
 	border 1px solid transparent
 	border-radius 20px
-	margin 0 auto
+	margin 1.5em auto
 	position relative
 	width 90%
 
