--- a/static/styl/main.styl
+++ b/static/styl/main.styl
@@ -3,12 +3,13 @@ gris_mozart = #F1F1F1
 azul_mozart = #2475E0
 rojo_mozart = #E54D3C
 
-@import "base.styl"
-@import "fonts.styl"
-@import "home.styl"
-@import "icons.styl"
-@import "login.styl"
 @import "nib"
 @import "nib/gradients"
+@import "fonts.styl"
+@import "icons.styl"
+@import "base.styl"
+@import "home.styl"
+@import "index.styl"
+@import "login.styl"
 @import "normalize.styl"
 @import "register.styl"
