--- a/static/styl/main.styl
+++ b/static/styl/main.styl
@@ -3,7 +3,7 @@ gris_mozart = #F1F1F1
 azul_mozart = #2475E0
 rojo_mozart = #E54D3C
 
-@import "nib"
+/*@import "nib"
 @import "nib/gradients"
 @import "fonts.styl"
 @import "icons.styl"
@@ -12,4 +12,4 @@ rojo_mozart = #E54D3C
 @import "index.styl"
 @import "login.styl"
 @import "normalize.styl"
-@import "register.styl"
+@import "register.styl"*/
