vista movil del formulario de nueva obra con margen inferior

--- a/templates/subir-obra.html
+++ b/templates/subir-obra.html
@@ -46,16 +46,17 @@
 				<option value="Otros">Otros</option>
 	    	</select>
 	    	<div class="Upload-fileContainer">
-	    		<span class="Upload-filename" id="cover-name">Cover de la Obra</span>
+	    		<span class="Upload-fileName" id="cover-name">Cover de la Obra</span>
 	    		<input type="file" class="Upload-file" id="cover-file">
 	    	</div>
 	    	<div class="Upload-fileContainer">
-	    		<span class="Upload-filename" id="file-name">Archivo de la Obra</span>
+	    		<span class="Upload-fileName" id="file-name">Archivo de la Obra</span>
 	    		<input type="file" class="Upload-file" id="file-file">
 	    	</div>
 	    	<button class="Upload-button" type="submit">Enviar</button>
     	</form>
     </section>
+    <div class="Bottom-page"></div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="../static/js/main.js"></script>
 </body>
