--- a/static/styl/subir-obra.styl
+++ b/static/styl/subir-obra.styl
@@ -10,22 +10,49 @@
 	
 .Upload-container
 	background white
-	border 1px solid transparent
 	border-radius 20px
-	margin 0 auto
+	margin 1em auto
+	overflow hidden
 	position relative
-	top 5.5em
+	top 4.5em
 	width 90%
-	margin-bottom 7em
 
-.Upload-title
-	font-weight 500
-	color gray
-	text-align center
+.Upload-file
+	bottom 0
+	cursor pointer
+	margin 0
+	opacity 0
+	padding 0
+	position absolute
+	right 0
+	top 0
+	width 100%
 
+.Upload-fileContainer
+	background-color #eee
+	display block
+	margin 1em auto
+	overflow hidden
+	padding 0.5em 0
+	position relative
+	width 90%
+
+.Upload-fileName
+	color #777
+	display block
+	margin 0 auto
+	overflow hidden
+	position relative 
+	margin-right 0.5em
+	padding 0em 0.5em
+
+.Upload-form
+	margin-bottom 2em
+	overflow hidden	
+
+.Upload-input
 .Upload-select
 .Upload-textarea
-.Upload-input
 	background-color #eee
 	border none
 	border-radius 3px
@@ -33,39 +60,19 @@
 	display block
 	margin 1em auto
 	padding 0.5em
-	text-align center
-	width 90%	
+	width 90%
 
 .Upload-textarea
 	height 14em
 
-.Upload-fileContainer
-	background-color #eee
-	margin 1em auto
-	display block
-	width 90%
+.Upload-title
+	color gray 
+	font-weight 500
+	margin 1em 0
 	position relative
-	padding 0.5em 0
 	text-align center
-	overflow hidden
 
-.Upload-filename
-	text-align center
-	position relative 
-	width 90%
-	display block
-	margin 0 auto
-	overflow hidden
-	color #777
-
-.Upload-file
-	position absolute
-	top 0
-	width 100%
-	bottom 0
-	right 0
-	margin 0
-	padding 0
-	cursor pointer
-	opacity 0
-	// filter alpha(opacity=0)*/
+.Bottom-page
+	height 0.75em
+	position relative
+	top 5em
